	  arch_usbhost_initialize() that must be provided by the platform-
	  specific code (2013-11-29).
	* apps/nshlib/nsh_fscmds.c:  Add an option to the mkfatfs command to
	  specify FAT12, FAT16, or FAT32 (2013-12-5).

6.33 2014-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/nshlib/nsh_mntcmds.c:  Modified the df -h logic to eliminate
	  truncating numbers in conversion (like 7900 -> 7M).  From Ken
	  Pettit (2013-12-12).
	* Moved configs/stm3240g-eval/src/up_cxxinitialize.c to
	  apps/platform/stm3240g-eval/up_cxxinitialize.c:  Now it is available
	  in user-space in the kernel mode build (2013-12-29).
	* apps/examples/mount/Kconfig:  Fill in empty Kconfig file (2013-12-31).
	* builtin/Makefile: Fixes for native Windows build from Max Holtzberg
	  (2014-1-4).
	* apps/netutils/dhcpc/Kconfig, resolv/Kconfig, telnetd/Kconfig, and
	  apps/nshlib/Kconfig:  Refactor some configuration dependencies:  NSH
	  features should debug on netutil selections; netutil selections
	  should depend on networking selections. (2014-1-9).
	* apps/nshlib/nsh_command.c:  Separate NSH command handling from NSH
	  line parsing.  This re-partitioning simplifies the logic and will
	  enable some things to come (2014-1-10).
	* apps/nshlib/nsh_parse.c:  Will now support multiple commands on a
	  command line, each separated with a semi-colon (2014-1-10).
	* apps/nshlib/nsh_parse.c:  Put the logic that executes a command
	  after parsing parameters into a separate file so that it can be
	  reused (2014-1-10).
	* apps/nshlib/nsh_parse.c:  Add initial support of commands enclosed
	  in back quotes as command arguments.  Functionality still incomplete
	  on initial commit (2014-1-10).
	* Logic to support commands enclosed in back quotes is functional
	  but not thoroughly tested (2014-1-11).
	* apps/nshlib/nsh_parse.c:  Can now handle arguments that are
	  concatenations of constant strings, command return data, application
	  return data, and environment variables (2014-1-11).
